@@ -70,6 +70,8 @@ AnalyzerOptions::AnalyzerOptions(): _optionsErrorMessage(""),_optionsInfo(""),_n
     "   --pag-memsize-grow=<num> grow memory if less than <num>% are free after GC\n"
     "   --run-pointsto-analysis  run a points-to analysis on the ICFG\n"
     "   --resolve-funcptr-calls  resolve indirect calls using pointer analysis\n"
+    "   --compute-call-strings   compute representation of PAG call strings\n"
+    "   --no-compute-call-strings do not compute call strings\n"
     "\n"
     " Output options:\n"
     "   --statistics             output analyzer statistics on stdout\n"
@@ -118,8 +120,9 @@ AnalyzerOptions::AnalyzerOptions(): _optionsErrorMessage(""),_optionsInfo(""),_n
     "                            --number-expressions --pag-memsize-mb=5\n"
     "                            --pag-memsize-grow=30 --no-statistics\n"
     "                            --analysis-files=all --analyis-annotation\n"
-    "                            --verbose --no-output-call-strings\n"
-    "                            --warn-deprecated --gdl-nodeformat=no-asttext\n"
+    "                            --verbose --compute-call-strings\n"
+    "                            --no-output-call-strings --warn-deprecated\n"
+    "                            --gdl-nodeformat=no-asttext\n"
     "                            --gdl-nodeformat=no-varid --gdl-nodeformat=varname\n"
     "                            --gdl-nodeformat=no-exprid\n"
     "                            --gdl-nodeformat=exprsource\n"
