@@ -22,6 +22,9 @@ V0.?.? ? AP,...
     information about the interprocedural analysis context
   - Experimental --output-call-strings command line flag prints a
     representation of PAG's call strings
+  - After context-sensitive data flow analysis, the ICFG now contains a
+    collection of Context objects (Context.h) that contain call string
+    information.
 
 V0.8.5 2008-11-22 GB,AP,VP,MS
 
